<resources>
    <!-- General stuff -->
    <string name="app_name">IGC Sync</string>

    <string name="preference_igc_directory_url" translatable="false">igc_directory</string>
    <string name="preference_glider_category" translatable="false">glider_category</string>
    <string name="preference_start_type" translatable="false">start_type</string>
    <string name="preference_glider_manufacturer" translatable="false">glider_manufacturer</string>
    <string name="preference_glider_certification" translatable="false">glider_certification</string>
    <string name="preference_glider_model" translatable="false">glider_model</string>
    <string name="preference_glider_size" translatable="false">glider_size</string>
    <string name="preference_map_type" translatable="false">map_type</string>
    <string name="preference_minimum_flight_duration_seconds" translatable="false">minimum_flight_duration_seconds</string>
    <string name="preference_reparse_igc" translatable="false">ReparseIGCs</string>

    <string name="default_leonardo_submit_flight_url" translatable="false">http://xc.dhv.de/xc/modules/leonardo/flight_submit.php</string>
    <string name="default_dhvxc_upload_flights_url" translatable="true">https://en.dhv-xc.de/api/v1/flights</string> <!-- There is a special URL with german messages, for this reason this is translateable-->
    <string name="regex_flight_id_parser" translatable="false">.*ID (?&lt;flightId&gt;\\d+).*</string>

    <string name="default_minimum_flight_duration_seconds" translatable="false">60</string>


    <!-- Translatable UI strings -->
    <string name="title_settings">Settings</string>
    <string name="label_data_directory">Data directory:</string>
    <string name="button_select_data_directory">Select</string>
    <string name="warning_error_accessing_data_directory">An error occurred accessing the data directory, please check the settings.</string>
    <string name="label_scan_finished_with_files_found">Search finished,  %1$d new flights found</string>
    <string name="label_scan_finished_with_file_found">Search finished, one new flight found</string>
    <string name="label_scan_finished_with_no_files_found">Search finished, no new flights found</string>
    <string name="label_scan_failed">The search failed on file %1$s</string>
    <string name="label_scan_cancelled">Search cancelled</string>
    <string name="label_scanning_progress">Importing flights (%1$d%%)</string>
    <string name="headline_dhv_xc" translatable="false">DHV-XC</string>
    <string name="headline_general">General settings</string>
    <string name="label_username">Upload username</string>
    <string name="hint_username_john_doe">JohnDoe</string>
    <string name="label_password">Upload password</string>
    <string name="hint_password">YourSecretUPLOADPassword</string>
    <string name="headline_pilot_settings">Pilot settings</string>
    <string name="label_glider_category">Glider Category</string>
    <string name="label_start_type">Start type</string>
    <string name="label_glider_manufacturer">Glider manufacturer</string>
    <string name="label_glider_model">Glider model</string>
    <string name="label_glider_size">Glider size</string>
    <string name="label_glider_certification">Glider certification</string>
    <string name="hint_glider_manufacturer" translatable="false">Skywalk</string>
    <string name="hint_glider_model" translatable="false">Masala</string>
    <string name="hint_glider_size" translatable="false">S</string>
    <string name="label_ignore_flights_below_seconds">Ignore flights below (seconds)</string>

    <string name="action_settings">Settings</string>

    <string name="button_description_import_new_flights">Import new flights</string>
    <string name="toast_scan_for_new_flights">Searching for new flights…</string>
    <string name="label_filename">Filename:</string>
    <string name="label_flight_start_time">Take-off:</string>
    <string name="label_flight_duration">Duration:</string>
    <string name="content_description_flight_on_dhvxc">Flight available on DHV-XC</string>
    <string name="button_upload_tandem" translatable="false">Tandem Cup</string>
    <string name="button_upload_flight" translatable="false">Upload</string>
    <string name="button_upload_standard" translatable="false">Standard Cup</string>
    <string name="button_upload_sport" translatable="false">Sport Cup</string>
    <string name="button_upload_performance" translatable="false">Performance Cup</string>
    <string name="button_upload_flightbook">Flightbook</string>
    <string name="button_view_flight">View</string>
    <string name="button_dhv_xc_content_description" translatable="false">DHV XC</string>
    <string name="marker_landing">Landing</string>
    <string name="marker_start">Take-off</string>
    <string name="button_map_mode_content_description">Map mode</string>
    <string name="alert_text_error_during_upload">An error occurred during upload, please try again later.</string>
    <string name="alert_text_auth_error_during_upload">It looks like your credentials were incorrect, please ensure to use your DHV-XC UPLOAD username &amp; password, not the username &amp; password for the portal itself</string>
    <string name="label_offer_upload_to_tandem_cup">Offer upload to tandem cup</string>
    <string name="preference_offer_upload_tandem_cup" translatable="false">offer_upload_tandem_cup</string>
    <string name="label_upload_into">Upload into</string>
    <string name="title_about_app">About this app</string>
    <string name="action_about_this_app">About this app</string>
    <string name="content_description_application_logo">Application Logo</string>
    <string name="label_visit_us_on_github"><![CDATA[Visit us on <a href=\"https://github.com/RomanKreisel/IGCSync\">GitHub</a>]]></string>
    <string name="label_mention_logo_origin"><![CDATA[Many thanks go to <a href=\"https://pixabay.com/de/users/gdj-1086657/\">Gordon Johnson</a>, for unkowingly providing a great <a href=\"https://pixabay.com/de/vectors/paragleiten-fallschirm-silhouette-4037231/\">image</a> as our new logo]]></string>
    <string name="alert_text_upload_started">Uploading…</string>
    <string name="message_this_is_a_demo_flight">This is a demo flight, which will automatically disappear once you import your own flights from a directory with IGC files.</string>
    <string name="title_demo_flight">Demo Flight</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_view">View</string>
    <string name="menu_item_mark_as_favorite">Mark as favorite</string>
    <string name="menu_item_unmark_as_favorite">Unmark as favorite</string>
    <string name="content_description_favorite_flight">Favorite Flight</string>
    <string name="alert_title_ImportNewFlights">Import new flights?</string>
    <string name="alert_text_ImportNewFlights">%d new flights where found, do you want to import them into your logbook?</string>
    <string name="alert_title_no_flights_shared">No flights shared</string>
    <string name="alert_text_no_flight_detected_in_shared_content">No (new) flights detected in the content shared by the other application</string>
    <string name="alert_text_ImportNewFlight">One new flight was found, do you want to import it into your logbook?</string>
    <string name="inform_about_reparse_igc">Updating database</string>
</resources>